added a token login to the chat without interface
